2004-06-06 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.c: implemented undo milestone and 
	fixed duration in task dialog.
	
2004-06-04 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-dialog.c: implemented undo for all the fields
	in the first page of the task dialog editor notebook, except 
	milestone and fixed duration.

	* src/planner-resource-view.c: fixed memory leaks using GValues.

	* src/planner-task-tree.c: fixed memory leaks using GValues.
	

2004-06-03  Setul Patel  <setulkumarpatel@yahoo.com>

	* data/ui/main-window.ui: Fix bug #143662.
	
2004-06-02  Richard Hult  <richard@imendio.com>

	* Commit patch from Lincoln Phipps to fix bug #140694.
	
2004-05-20  Richard Hult  <richard@imendio.com>

	* configure.in: Fix aclocal flags. Bump version to 0.11.90.	

	* autogen.sh: Revert change from Tomasz.

2004-05-18 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-task-tree.c: implemented custom properties editing undo
	and reset costraints undo.

2004-05-14  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* src/planner-python-plugin.c:
	Changed the python interpreter management.

2004-05-12  Tomasz Kłoczko <kloczek@pld.org.pl>

	* autogen.sh: allow use autogen.sh not only in automake 1.7.x enviroment.
	* data/ui/Makefile.am: fix for include in dist tar ball timetable
	  and python UI files.
	* dotnet/samples/Makefile.am, dotnet/Makefile.am: include in dist
	  tar ball example files.
	* src/Makefile.am: include in dist tar ball missing header files.

2004-05-10  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-view.c (ttable_view_update_zoom_sensitivity) 
	(activate, ttable_view_zoom_out_cb, ttable_view_zoom_in_cb) 
	(ttable_view_zoom_to_fit_cb): Fix bug #141116, patch from Lincoln.

	* data/ui/time-table-view.ui: Fix the weird edit menu.
	* src/planner-ttable-model.c: Start cleaning up coding style.

2004-05-10  Richard Hult  <richard@imendio.com>

	* data/ui/Makefile.am: Dist all ui files unconditionally.
